Fixing "No forms submitted yet..." double scroll-bar, other minor fixes

--- a/views/static/css/approver.css
+++ b/views/static/css/approver.css
@@ -285,6 +285,11 @@ header{
 	cursor: pointer;
 }
 
+#main-content .content-feed .content-empty{
+	padding: 20;
+	margin: 1em 0;
+}
+
 #main-content .content-feed .content-wrapper.active{
 	border-color: var(--theme-color);
 }
